Implementado el sistema en platform designer.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,48 @@
-db/
+# ignore Quartus II generated folders
+*/db/
+*/incremental_db/
+*/simulation/
+*/timing/
+*/testbench/
+*/*_sim/
 incremental_db/
-output_files/
-simulation/
+db/
+_output_files/
+PLLJ_PLLSPE_INFO.txt
+
+.qsys_edit
+unsaved
+platform
+
+*.png
+*.bak
+/db
+/simulation
+/incremental_db
+*.sof
+*.rpt
+*.summary
+*.done
+*.jdi
+*.qdf
+*.cdf
+*.pin
+*.pof
+*.qws
+*.log
+*.chg
+/output_files
+/.sopc_builder
+/sopc_builder_log.txt
+/nios_system_log.txt
+*.html
+*.bsf
+*.ptf.*
+/.metadata
+*.elf
+*.map
+*.objdump
+obj
+*.swp
+*.a
+nios_workspace
