--- a/ProcQsys/software/proyecto_1_bsp/Makefile
+++ b/ProcQsys/software/proyecto_1_bsp/Makefile
@@ -27,8 +27,8 @@ SPACE := $(empty) $(empty)
 # This will ensure paths are readable by GNU Make.
 #------------------------------------------------------------------------------
 
-UNAME = $(shell uname -r | tr A-Z a-z)
-ifeq ($(findstring microsoft,$(UNAME)),microsoft)
+UNAME = $(shell uname -r)
+ifeq ($(findstring Microsoft,$(UNAME)),Microsoft)
 	WINDOWS_EXE = .exe
 endif
 
@@ -93,12 +93,12 @@ OBJ_DIR := ./obj
 
 # This following VERSION comment indicates the version of the tool used to 
 # generate this makefile. A makefile variable is provided for VERSION as well. 
-# ACDS_VERSION: 22.1
-ACDS_VERSION := 22.1
+# ACDS_VERSION: 20.1
+ACDS_VERSION := 20.1
 
 # This following BUILD_NUMBER comment indicates the build number of the tool 
 # used to generate this makefile. 
-# BUILD_NUMBER: 922
+# BUILD_NUMBER: 720
 
 SETTINGS_FILE := settings.bsp
 SOPC_FILE := C:/intelFPGA_lite/Proyectos/P1-SistemasOperativos/ProcQsys/platform.sopcinfo
@@ -138,7 +138,7 @@ BSP_CFLAGS_DEBUG = -g
 # compiler optimization can remove variables and produce non-sequential 
 # execution of code while debugging. This setting defines the value of 
 # BSP_CFLAGS_OPTIMIZATION in Makefile. 
-BSP_CFLAGS_OPTIMIZATION = -O0
+BSP_CFLAGS_OPTIMIZATION = '-Os'
 
 # C/C++ compiler warning level. "-Wall" is commonly used.This setting defines 
 # the value of BSP_CFLAGS_WARNINGS in Makefile. 
@@ -206,7 +206,7 @@ GENERATED_C_LIB_SRCS += alt_sys_init.c
 # each source file type (C, assembly, etc.) is concatenated together and used
 # to construct a list of objects. Pattern rules to build each object are then
 # used to build each file.
-
+#-------------------------------------------------------------------------------
 
 # altera_avalon_pio_driver sources root 
 altera_avalon_pio_driver_SRCS_ROOT := drivers
@@ -484,16 +484,6 @@ build_pre_process :
 
 build_post_process :
 	$(BUILD_POST_PROCESS)
-
-
-ifneq ($(LICENSE_NOTICE_TEXT),)
-build_post_process : $(OBJ_DIR)/emit_license_notice
-
-$(OBJ_DIR)/emit_license_notice: $(LICENSE_NOTICE_TEXT)
-	@cat $<
-	@$(MKDIR) $(@D)
-	@touch $@
-endif #LICENCE_NOTICE_TEXT set
 
 .PHONY: build_pre_process build_post_process
 
