--- a/ProcQsys/ProcQsys.qsf
+++ b/ProcQsys/ProcQsys.qsf
@@ -272,4 +272,5 @@ set_location_assignment PIN_AK13 -to sdram_wire_cke
 set_location_assignment PIN_AA13 -to sdram_wire_we_n
 set_location_assignment PIN_AG11 -to sdram_wire_cs_n
 set_location_assignment PIN_AB12 -to reset_reset
+set_location_assignment PIN_AD11 -to percent_ext_export
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
