Guardado de resultados Cortex

--- a/Cortex/Makefile
+++ b/Cortex/Makefile
@@ -1,2 +1,2 @@
 project_1:
-	arm-linux-gnueabihf-gcc -static project_1.c encode.c laplacian.c -o project_1
+	arm-linux-gnueabihf-gcc -static project_1.c encode.c laplacian.c -o project_1 -lm
